--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "context-algorithmic.tar.xz": 0c916f34ea7e25faa25a3d15256e80a4e03cd420
+  context-algorithmic.tar.xz: d901a8f7973ee17068f5cedb26c10519e6f7f3f2
